# Wedit

./: .gitignore  CMakeLists.txt  README.md  make.sh
app/: CMakeLists.txt  make.sh
app/src/: client.cpp  main.cpp  server.cpp
apps/: app.cc  server.cc  server_test_1.cc  server_test_2.cc
apps/Wedit/: Wedit.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/wedit/: Peer.h  a.out  client  connection.h  connection_manager.h  crdt.h  item.h  server1  server1.cpp  server2  server2.cpp  uid.h  utils.h
src/: Peer.cc  connection.cc  connection_manager.cc  crdt.cc  item.cc  uid.cc  utils.cc
src/temp/: client1.cpp  server.cpp
